samples/_failures_safe/1761471292_7a8b36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddf3aa8a.c: In function ‘main’:
./samples/SAFE/__tmp_ddf3aa8a.c:155:9: error: expected expression at end of input
  155 |         if (from < 0 || from >= num_nodes || to <
      |         ^~
./samples/SAFE/__tmp_ddf3aa8a.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ddf3aa8a.c:155:9: error: expected declaration or statement at end of input
